--- a/i3/.config/i3/scripts/i3blocks.conf
+++ b/i3/.config/i3/scripts/i3blocks.conf
@@ -27,6 +27,10 @@ command=/home/feniljain/.config/i3/scripts/disk
 interval=1
 label=
 
+[battery]
+command=/home/feniljain/.config/i3/scripts/battery
+interval=1
+
 #[volume]
 #label=
 #instance=Master
