--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -358,8 +358,8 @@ bindsym XF86AudioPrev exec playerctl previous
 
 # exec /usr/bin/desktime-linux
 exec /usr/bin/safeeyes
-# exec_always feh --bg-scale ~/Pictures/Wallpapers/xuid3yol2x271.webp
-exec_always feh --bg-scale ~/Pictures/Wallpapers/vim-wallpaper1.png
+exec_always feh --bg-scale ~/Pictures/Wallpapers/gchudbo1rhf71.jpg
+# exec_always feh --bg-scale ~/Pictures/Wallpapers/vim-wallpaper1.png
 exec_always --no-startup-id compton
 
 # assign [class="Firefox Developer Edition"] $ws1
