add: Adding themes, lsp enhancements and minor tmux changes

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,15 +1,15 @@
 # Native bindings changed
 
-# remap prefix from 'C-b' to 'C-a'
+# remap prefix from 'C-b' to 'M-a'
 unbind C-b
 set-option -g prefix M-a
 bind-key M-a send-prefix
-setw -g monitor-activity on
 
-set -g default-terminal "screen-256color"
-# set -g mouse on
-set -g history-limit 100000
-set-option -g default-shell /bin/zsh
+# split panes using | and -
+bind | split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
 # bind-key M-f resize-pane -Z
 bind -n M-f resize-pane -Z
@@ -17,6 +17,12 @@ bind X kill-session
 
 #reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
+
+setw -g monitor-activity on
+set -g default-terminal "screen-256color"
+# set -g mouse on
+set -g history-limit 100000
+set-option -g default-shell /bin/zsh
 
 # switch panes using Alt-arrow without prefix(Now provided by tmux-tilish)
 # bind -n M-h select-pane -L
@@ -57,17 +63,11 @@ set -g status-position top
 # set -g status-interval 5
 bind-key t set-option status
 
-# split panes using | and -
-bind | split-window -h
-bind - split-window -v
-unbind '"'
-unbind %
-
-
 # LIST OF PLUGINS
 
 #Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
+
 set -g @plugin 'tmux-plugins/tmux-sensible'
 
 #Themes
@@ -87,7 +87,6 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
-
 
 # TPM KEYBINDINGS:
 
