add: Adding plugins to vim, small fs changes to nvim and tmux compatibility

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -39,6 +39,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 # setw -g mouse on
 set-window-option -g mode-keys vi # vi mode in tmux
+set-option -sa terminal-overrides ',screen-256color:RGB'
 
 # THEME SETTINGS
 
