add: Adding ricing for firefox, better lua init for neovim and i3 small changes

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -358,6 +358,7 @@ bindsym XF86AudioPrev exec playerctl previous
 
 # exec /usr/bin/desktime-linux
 exec /usr/bin/safeeyes
+exec /usr/bin/redshift
 exec_always feh --bg-scale ~/Pictures/Wallpapers/gchudbo1rhf71.jpg
 # exec_always feh --bg-scale ~/Pictures/Wallpapers/vim-wallpaper1.png
 exec_always --no-startup-id compton
