add: Making zsh experience better, nvim-coc config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -64,6 +64,8 @@ set -g @tmux_power_theme 'forest'
 # set -g status-interval 5
 bind-key t set-option status
 
+bind-key -r i run-shell "tmux neww bash -c \"~/.local/bin/tmux-cht.sh\""
+
 # LIST OF PLUGINS
 
 #Plugin Manager
