--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -19,7 +19,10 @@ bind X kill-session
 bind r source-file ~/.tmux.conf
 
 setw -g monitor-activity on
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+set -g default-terminal "tmux-256color"
+# useful for fixing mismatching nvim colors while on Alacritty. Follow: https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6
+set -ag terminal-overrides ",xterm-256color:RGB"
 # set -g mouse on
 set -g history-limit 100000
 set-option -g default-shell /bin/zsh
@@ -37,6 +40,7 @@ set -g status-position top
 
 set -g base-index 1
 setw -g pane-base-index 1
+set -g renumber-windows on		# renumber windows when a window is closed
 # setw -g mouse on
 set-window-option -g mode-keys vi # vi mode in tmux
 set-option -sa terminal-overrides ',screen-256color:RGB'
@@ -65,6 +69,9 @@ set -g @tmux_power_theme 'forest'
 bind-key t set-option status
 
 bind-key -r i run-shell "tmux neww bash -c \"~/.local/bin/tmux-cht.sh\""
+
+# Make strikethrough work in tmux
+set -as terminal-overrides ',xterm*:smxx=\E[9m'
 
 # LIST OF PLUGINS
 
