--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,11 +1,13 @@
 # Native bindings changed
 
 # remap prefix from 'C-b' to 'M-a'
+set -g prefix Home
 unbind C-b
-set-option -g prefix M-a
-bind-key M-a send-prefix
+bind-key Home send-prefix
 
 # split panes using | and -
+# bind | split-window -h
+# bind - split-window -v
 bind | split-window -h
 bind - split-window -v
 unbind '"'
@@ -20,10 +22,10 @@ bind r source-file ~/.tmux.conf
 
 setw -g monitor-activity on
 # set -g default-terminal "screen-256color"
-set -g default-terminal "tmux-256color"
-# useful for fixing mismatching nvim colors while on Alacritty. Follow: https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6
+# set -g default-terminal "tmux-256color" # Causes problems in macos
+# # useful for fixing mismatching nvim colors while on Alacritty. Follow: https://gist.github.com/andersevenrud/015e61af2fd264371032763d4ed965b6
 set -ag terminal-overrides ",xterm-256color:RGB"
-# set -g mouse on
+# # set -g mouse on
 set -g history-limit 100000
 set-option -g default-shell /bin/zsh
 
@@ -33,6 +35,11 @@ set -g status-position top
 # set -g status-utf8 on
 
 # switch panes using Alt-arrow without prefix(Now provided by tmux-tilish)
+bind h select-pane -L
+bind l select-pane -R
+bind k select-pane -U
+bind j select-pane -D
+
 # bind -n M-h select-pane -L
 # bind -n M-l select-pane -R
 # bind -n M-k select-pane -U
@@ -72,6 +79,8 @@ bind-key -r i run-shell "tmux neww bash -c \"~/.local/bin/tmux-cht.sh\""
 
 # Make strikethrough work in tmux
 set -as terminal-overrides ',xterm*:smxx=\E[9m'
+
+set -g @tilish-prefix 'Home'
 
 # LIST OF PLUGINS
 
