--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -82,6 +82,10 @@ set -as terminal-overrides ',xterm*:smxx=\E[9m'
 
 set -g @tilish-prefix 'Home'
 
+# Move windows by one position using shift-left shift-right
+bind-key -n S-Left swap-window -t -1
+bind-key -n S-Right swap-window -t +1
+
 # LIST OF PLUGINS
 
 #Plugin Manager
