--- a/nvim-coc/.config/nvim/coc-settings.json
+++ b/nvim-coc/.config/nvim/coc-settings.json
@@ -41,5 +41,8 @@
     "constructor": "  ",
     "value": "  ",
     "enumMember": "  "
-  }
+  },
+  "rust-analyzer.procMacro.enable": true,
+  "rust-analyzer.experimental.procAttrMacros": true,
+  "rust-analyzer.cargo.allFeatures": true
 }
