feat(tmux): remove theme plugin and revamp statys line

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,7 +30,13 @@ set -g history-limit 100000
 set-option -g default-shell /bin/zsh
 
 set -g status on
-set -g status-position top
+# set -g status-position top
+set-option -g status-justify "centre"
+set-option -g status-left-length 60
+set-option -g status-right-length 90
+set-option -g status-style fg=green,bg=black
+
+set -g status-right '%H:%M %d-%b-%y'
 # enable utf-8 on status bar
 # set -g status-utf8 on
 
@@ -65,7 +71,7 @@ set-option -sa terminal-overrides ',screen-256color:RGB'
 
 # Tmux powerline theme
 # Possible colors: sky, coral, snow, violet, forest, moon, redwine, gold, or set custom color: '#483D8B'
-set -g @tmux_power_theme 'forest'
+# set -g @tmux_power_theme 'forest'
 
 # MISCELLANEOUS PLUGINS SETTINGS
 
@@ -96,7 +102,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 #Themes
 # set -g @plugin 'seebi/tmux-colors-solarized'
 # set -g @plugin 'dracula/tmux'
-set -g @plugin 'wfxr/tmux-power'
+# set -g @plugin 'wfxr/tmux-power'
 
 # WM type keybindings in tmux
 set -g @plugin 'jabirali/tmux-tilish'
