--- a/misc/Makefile
+++ b/misc/Makefile
@@ -29,14 +29,17 @@ keyboard-colemak-dual:
 # xrandr --output LVDS-1 --off --output e-DP-1 --off --output HDMI-1 --primary --mode 1280x1024 --pos 0x0 --rotate normal --output VGA-1 --off
 # ssh-dyte-vm:
 # 	ssh -i ~/.ssh/dyte_vm/LightsailDefaultKey-ap-southeast-1.pem ubuntu@13.233.112.41
-ssh-dyte-vm:
-	ssh -i ~/.ssh/dyte_vm/LightsailDefaultKey-ap-south-1.pem ubuntu@3.110.213.239
+ssh-dyte-staging-jumphost:
+	ssh -i ~/.ssh/id_rsa fenil@jumphost.staging.dyte.in
 ssh-dyte-jumphost:
 	ssh -i ~/.ssh/dyte_staging_jumphost/dyte.pem ubuntu@jumphost.staging.dyte.in
-ssh-dyte-livestreaming:
-	ssh -i ~/.ssh/dyte_livestreaming/localtesting.pem ubuntu@ip-10-0-4-62.ap-south-1.compute.internal
+ssh-dyte-vm:
+	ssh -i ~/.ssh/dyte_vm/LightsailDefaultKey-ap-south-1.pem ubuntu@3.110.213.239
+ssh-dyte-benchmarking:
+	ssh -i ~/.ssh/dyte/localtesting.pem ubuntu@ec2-3-110-62-171.ap-south-1.compute.amazonaws.com -vvv
+	#ssh -i ~/.ssh/dyte_livestreaming/localtesting.pem ubuntu@ec2-3-110-62-171.ap-south-1.compute.amazonaws.com -vvv
 ssh-dyte-playground:
-	ssh -i ~/.ssh/dyte_playground/dyte.pem ubuntu@testingv3.dyte.in -vvv
+	ssh -i ~/.ssh/dyte_playground/dyte.pem ubuntu@testingv3.dyte.in
 ssh-mc-server:
 	ssh -i ~/.ssh/mc/mc_key_1212.pem priyeshbhawsar15@20.205.124.233
 remove-title-bar:
@@ -44,3 +47,6 @@ remove-title-bar:
 logs:
 	adb -e logcat com.dyte.mobilecorekmm.android > logs-with-webrtc-errors
 	# adb logcat | grep -F "`adb shell ps | grep com.dyte.mobilecorekmm.android  | tr -s [:space:] ' ' | cut -d' ' -f2`"
+
+# ssh-dyte-livestreaming:
+# 	ssh -i ~/.ssh/dyte_livestreaming/localtesting.pem ubuntu@ip-10-0-4-62.ap-south-1.compute.internal
